[package]
name = "hyper_headset"
version = "1.7.0"
edition = "2021"
authors = ["Lennard Kittner"]
description = "A CLI and tray application for monitoring and managing HyperX headsets."

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
enigo = "0.6.1"
hidapi = { path = "vendor/hidapi" }
rusb = "0.9"
thistermination = "1.0.0"
[target.'cfg(target_os = "linux")'.dependencies]
dialog = "0.3.0"
ksni = "0.2.0"
shell-escape = "0.1.5"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.21.3"
winit = "0.30.13"

[target.'cfg(target_os = "windows")'.dependencies]
image = "0.25.10"
winreg = "0.56.0"
windows = { version = "0.62.2", features = [
    "Win32_System_LibraryLoader",
] }
